--- a/home.html
+++ b/home.html
@@ -65,5 +65,16 @@
         </ul>
       </div>
     </div>
+
+    <!-- card 3 -->
+    <div class="card3">
+      <div class="title">
+        <h1>Where You Need Us!</h1>
+      </div>
+
+      <div class="text">
+        <p>Hello how are you buddy</p>
+      </div>
+    </div>
   </body>
 </html>
